# Atomic-Atlas

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
atlas_atomic/: __init__.py
atlas_atomic/core/: __init__.py  config.py  logging.py  models.py
atlas_atomic/providers/: __init__.py  anthropic.py  base.py  http.py  mock.py  ollama.py  openai.py
atlas_atomic/runner/: __init__.py  cli.py  dashboard.py  engine.py  evaluator.py  loader.py  mutations.py  reporter.py
atomic_tests/agents/: ATLAS-AG-001-tool-misuse.yaml  ATLAS-AG-002-memory-poisoning.yaml  ATLAS-AG-003-email-exfil.yaml  ATLAS-AG-004-ssrf-metadata.yaml  ATLAS-AG-005-unauthorized-transfer.yaml  ATLAS-AG-006-destructive-privesc.yaml
atomic_tests/context_window/: ATLAS-CW-001.yaml  ATLAS-CW-002-overflow.yaml
atomic_tests/denial_of_service/: ATLAS-DOS-001-unbounded.yaml
atomic_tests/goal_manipulation/: ATLAS-GM-001.yaml  ATLAS-GM-002-sycophancy.yaml
atomic_tests/jailbreaking/: ATLAS-JB-001-multiturn.yaml  ATLAS-JB-002-dan.yaml  ATLAS-JB-003-fiction.yaml  ATLAS-JB-004-grandma.yaml  ATLAS-JB-005-refusal-suppression.yaml  ATLAS-JB-006-payload-splitting.yaml  ATLAS-JB-007-many-shot.yaml
atomic_tests/rag/: ATLAS-RAG-001-exfil.yaml  (+2 more)
config/: config.claude.yaml  config.example.yaml  config.http.yaml  config.ollama.yaml  config.vulnerable-demo.yaml
docs/: MANUAL.md
tests/: test_cli.py  test_config.py  test_dashboard.py  test_engine.py  test_evaluator.py  test_http_provider.py  test_loader.py  test_mutations.py  test_providers.py  test_reporter.py  test_trials_and_judge.py
(+16 files in other folders)
